# cli

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  minesweeper
solver/: hand_solver.py  solver.py
src/: game_logic.cpp  game_logic.hpp  main.cpp
src/csp/: csp.cpp  csp.hpp
text_minefields/: 4x4_m3_ng_bc.txt  empty
